syntax = "proto3";

package proto;

import "object.proto";
import "ref.proto";

//Put(*proto.Object) error
message PutRequest {
    Object object = 1;
}

message PutResponse {

}


//Get(*proto.Ref) (*proto.Object, error)
message GetRequest {
    Ref ref = 1;
}

message GetResponse {
    Object object = 1;
}

//Delete(*proto.Ref) error
message DeleteRequest {

}

message DeleteResponse {

}

//Walk(bool, proto.ObjectType, ObjectReceiver) error
message WalkRequest {
    bool load = 1;
    ObjectType objectType = 2;
}

message WalkResponse {
    ObjectHeader header = 1;
    Object object = 2;
}



service Store {
    rpc Put (PutRequest) returns (PutResponse) {}
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Delete (DeleteRequest) returns (DeleteResponse) {}
    rpc Walk(WalkRequest) returns (stream WalkResponse) {}
}
